--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <style>
+      * {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+#root {
+  background-color: #f2f2f2;
+  padding: 20px;
+  max-width: 400px;
+  margin: 0 auto;
+  border: solid 1px #ccc;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  margin-top: 40px;
+}
+    </style>
   </head>
   <body>
-    <h1>welcome</h1>
-    <!-- <script src="kow.js">
-
-    </script> -->
-    <script src="javascript.js"></script>
+    <script src="javascript.js">
+    </script>
   </body>
 </html>
