--- a/about.html
+++ b/about.html
@@ -1,39 +1,376 @@
 <!DOCTYPE html>
-<html>
-<style>
-.democlass {
-  color: red;
-}
-</style>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      .heading {
+        color: red;
+      }
+      .heading1 {
+        color: blue;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="root" class="root">
+    </div>
+    <script>
+      const root = document.getElementById("root");
+      root.style.padding = "20px";
+      root.style.boxSizing = "border-box";
+      root.style.display = "flex";
+      root.style.flexDirection = "column";
+      root.style.alignItems = "center";
+      //create heading
+      const heading = document.createElement("h1");
+      heading.innerText = "Calculator";
+      heading.style.textAlign = "center";
+      heading.style.marginBottom = "20px";
+      root.appendChild(heading);
+      //create input
+      const input = document.createElement("input");
+      // <input />
+      input.type = "text";
+      // <input type="text"/>
+      input.setAttribute("id", "input");
+      // <input type="text" id="input"/>
+      input.setAttribute("readonly", "true");
+      // <input type="text" id="input" readonly="true"/>
+      input.style.padding = "10px";
+      // <input type="text" id="input" readonly="true" style="padding: 10px"/>
+      input.style.fontSize = "20px";
+      // <input type="text" id="input" readonly="true" style="padding: 10px; font-size: 20px"/>
+      input.style.textAlign = "right";
+      // <input type="text" id="input" readonly="true" style="padding: 10px; font-size: 20px; text-align: right"/>
+      input.style.boxShadow = " 0 2px 5px rgba(0, 0, 0, 0.3) inset";
+      // <input type="text" id="input" readonly="true" style="padding: 10px; font-size: 20px; text-align: right; box-shadow:  0 2px 5px rgba(0, 0, 0, 0.3) inset"/>
+      input.style.borderRadius = "5px";
+      // <input type="text" id="input" readonly="true" style="padding: 10px; font-size: 20px; text-align: right; box-shadow:  0 2px 5px rgba(0, 0, 0, 0.3) inset; border-radius: 5px"/>
+      root.appendChild(input);
 
-<body>
-<h1 id="myH1">The Element Object</h1>
-<h2>The setAttribute() Method</h2>
+      //create buttons
 
-<p>Click "Add Class" to add a class attribute to the h1 element:</p>
-<p>The class attribute was added to this element.</p>
+      const parentbtn = document.createElement("div");
+      // <div></div>
+      parentbtn.setAttribute("id", "buttons");
+      // <div id="buttons"></div>
+      root.appendChild(parentbtn);
+      const styleforbtn = document.getElementById("buttons"); // <div></div>
+      styleforbtn.style.display = "grid";
+      styleforbtn.style.gridTemplateColumns = "repeat(4, 1fr)";
+      styleforbtn.style.gridGap = "10px";
+      styleforbtn.style.margin = "10px";
 
-<button onclick="myFunction()">Add Class</button>
+      const btn1 = document.createElement("button");
+      btn1.innerText = "C";
+      btn1.setAttribute("id", "C");
+      btn1.setAttribute("value", "C");
+      btn1.style.backgroundColor = "lightgray";
+      btn1.style.color = "black";
+      btn1.style.boxShadow = " 0 2px 5px rgba(0, 0, 0, 0.3)";
+      btn1.style.borderRadius = "5px";
+      btn1.style.fontSize = "20px";
+      btn1.style.padding = "10px";
+      btn1.style.textAlign = "center";
+      parentbtn.appendChild(btn1);
 
-<script>
-function myFunction() {
-const para = document.createElement("p");
-  para.textContent = "The class attribute was added to this element.";
-  document.body.appendChild(para);
-//   document.querySelector("p").style.backgroundColor = "yellow";
-//   const stye = document.querySelectorAll("p")
-//   for (let i = 0; i < stye.length; i++) {
-//     stye[i].style.backgroundColor = "yellow";
-//   } // set attribute
-//   document.getElementById("myH1").setAttribute("class", "democlass"); // set attribute
-// const node = document.createElement("li");
-// const textnode = document.createTextNode("Water");
-// node.appendChild(textnode);
-// document.getElementById("myList").appendChild(node);
-// const node = document.getElementById("myList2").lastElementChild;
-// document.getElementById("myList1").appendChild(node);
-}
-</script>
+      const btn2 = document.createElement("button");
+      btn2.innerText = "←";
+      btn2.setAttribute("id", "←");
+      btn2.setAttribute("value", "←");
+      btn2.style.backgroundColor = "lightgray";
+      btn2.style.color = "black";
+      btn2.style.boxShadow = " 0 2px 5px rgba(0, 0, 0, 0.3)";
+      btn2.style.borderRadius = "5px";
+      btn2.style.fontSize = "20px";
+      btn2.style.padding = "10px";
+      btn2.style.textAlign = "center";
+      parentbtn.appendChild(btn2);
 
-</body>
+      const btn3 = document.createElement("button");
+      btn3.innerText = "%";
+      btn3.setAttribute("id", "%");
+      btn3.setAttribute("value", "%");
+      btn3.style.backgroundColor = "lightgray";
+      btn3.style.color = "black";
+      btn3.style.boxShadow = " 0 2px 5px rgba(0, 0, 0, 0.3)";
+      btn3.style.borderRadius = "5px";
+      btn3.style.fontSize = "20px";
+      btn3.style.padding = "10px";
+      btn3.style.textAlign = "center";
+      parentbtn.appendChild(btn3);
+
+      const btn4 = document.createElement("button");
+      btn4.innerText = "/";
+      btn4.setAttribute("id", "/");
+      btn4.setAttribute("value", "/");
+      btn4.style.backgroundColor = "lightgray";
+      btn4.style.color = "black";
+      btn4.style.boxShadow = " 0 2px 5px rgba(0, 0, 0, 0.3)";
+      btn4.style.borderRadius = "5px";
+      btn4.style.fontSize = "20px";
+      btn4.style.padding = "10px";
+      btn4.style.textAlign = "center";
+      parentbtn.appendChild(btn4);
+
+      const btn5 = document.createElement("button");
+      btn5.innerText = "7";
+      btn5.setAttribute("id", "7");
+      btn5.setAttribute("value", "7");
+      parentbtn.appendChild(btn5);
+
+      const btn6 = document.createElement("button");
+      btn6.innerText = "8";
+      btn6.setAttribute("id", "8");
+      btn6.setAttribute("value", "8");
+      parentbtn.appendChild(btn6);
+
+      const btn7 = document.createElement("button");
+      btn7.innerText = "9";
+      btn7.setAttribute("id", "9");
+      btn7.setAttribute("value", "9");
+      parentbtn.appendChild(btn7);
+
+      const btn8 = document.createElement("button");
+      btn8.innerText = "*";
+      btn8.setAttribute("id", "*");
+      btn8.setAttribute("value", "*");
+      parentbtn.appendChild(btn8);
+
+      const btn9 = document.createElement("button");
+      btn9.innerText = "4";
+      btn9.setAttribute("id", "4");
+      btn9.setAttribute("value", "4");
+      parentbtn.appendChild(btn9);
+
+      const btn10 = document.createElement("button");
+      btn10.innerText = "5";
+      btn10.setAttribute("id", "5");
+      btn10.setAttribute("value", "5");
+      parentbtn.appendChild(btn10);
+
+      const btn11 = document.createElement("button");
+      btn11.innerText = "6";
+      btn11.setAttribute("id", "6");
+      btn11.setAttribute("value", "6");
+      parentbtn.appendChild(btn11);
+
+      const btn12 = document.createElement("button");
+      btn12.innerText = "-";
+      btn12.setAttribute("id", "-");
+      btn12.setAttribute("value", "-");
+      parentbtn.appendChild(btn12);
+
+      const btn13 = document.createElement("button");
+      btn13.innerText = "1";
+      btn13.setAttribute("id", "1");
+      btn13.setAttribute("value", "1");
+      parentbtn.appendChild(btn13);
+
+      const btn14 = document.createElement("button");
+      btn14.innerText = "2";
+      btn14.setAttribute("id", "2");
+      btn14.setAttribute("value", "2");
+      parentbtn.appendChild(btn14);
+
+      const btn15 = document.createElement("button");
+      btn15.innerText = "3";
+      btn15.setAttribute("id", "3");
+      btn15.setAttribute("value", "3");
+      parentbtn.appendChild(btn15);
+
+      const btn16 = document.createElement("button");
+      btn16.innerText = "+";
+      btn16.setAttribute("id", "+");
+      btn16.setAttribute("value", "+");
+      parentbtn.appendChild(btn16);
+
+      const btn17 = document.createElement("button");
+      btn17.innerText = "0";
+      btn17.setAttribute("id", "0");
+      btn17.setAttribute("value", "0");
+      parentbtn.appendChild(btn17);
+
+      const btn18 = document.createElement("button");
+      btn18.innerText = "00";
+      btn18.setAttribute("id", "00");
+      btn18.setAttribute("value", "00");
+      parentbtn.appendChild(btn18);
+
+      const btn19 = document.createElement("button");
+      btn19.innerText = ".";
+      btn19.setAttribute("id", ".");
+      btn19.setAttribute("value", ".");
+      parentbtn.appendChild(btn19);
+
+      const btn20 = document.createElement("button");
+      btn20.innerText = "=";
+      btn20.setAttribute("id", "=");
+      btn20.setAttribute("value", "=");
+      parentbtn.appendChild(btn20);
+
+      //divisble by 3 or 5 ; / divide quotient % remainder
+
+      // if(n%3 ==0){
+      //   console.log("divisible by 3")
+      // } else if(n%5 ==0){
+      //   console.log("divisible by 5")
+      // } else {
+      //   console.log("not divisible by 3 or 5")
+      // }
+
+
+      // let n = 45; 
+      // if (n % 3 == 0 && n % 5 == 0) {  
+      //   console.log("divisible by 3 and 5")
+      // }
+      // else if(n%3 ==0){
+      //   console.log("divisible by 3")
+      // } else if(n%5 ==0){
+      //   console.log("divisible by 5")
+      // } else {
+      //   console.log("not divisible by 3 or 5")
+      // }
+      /* 
+
+if else means condition is true or false given condition is true then line of code will be executed else line of code will be executed
+
+odd number   not divide by 2
+even number  divide by 2
+
+let x = 5  / and % 
+/ is division value 
+% is remainder value
+= is assignment value eg let x = 5;
+== is equal value but not check data type  eg 5 == "5"  //true
+=== is equal value and check data type  eg 5 === "5" //false 5===5 //true
+if(x % 2 == 0){  
+console.log("is an Even number")
+} else {
+  console.log("is an Odd number")
+} &&
+
+
+if else else if //
+
+
+*/
+
+    //  let x = prompt("Enter Stone Paper Scissor Value");
+    
+    //    if (x % 2 == 0) {
+    //     alert("is an Even number", x);
+    //   } else {
+    //     alert("is an Odd number", x);
+    //   }
+
+      // if (x % 3 === 0 && x % 2 === 0) {
+      //  alert("is an divisible by 3 and 2 number", x);
+      // } else if (x % 3 == 0) {
+      //   alert("is an divisible by 3 number", x);
+      // } else if (x % 2 == 0) {
+      //   alert("is an Even number", x);
+      // } else {
+      //   alert("is an Odd number", x);
+      // }
+
+      // stone paper scissor game //
+
+      //create button
+      // const btn = [
+      //   "7",
+      //   "8",
+      //   "9",
+      //   "*",
+      //   "4",
+      //   "5",
+      //   "6",
+      //   "-",
+      //   "1",
+      //   "2",
+      //   "3",
+      //   "+",
+      //   "0",
+      //   "00",
+      //   ".",
+      //   "/",
+      //   "C",
+      //   "←",
+      //   "%",
+      //   "=",
+      // ];
+
+      // for (let i = 0; i < btn.length; i++) {
+      //   const button = document.createElement("button");
+      //   button.innerText = btn[i];
+      //   button.setAttribute("id", btn[i]);
+      //   button.setAttribute("value", btn[i]);
+      //   parentbtn.appendChild(button);
+      // }
+
+      // const buttonall = document.querySelectorAll("button");
+
+      // for (let i = 0; i < buttonall.length; i++) {
+      //   buttonall[i].style.width = "100%";
+      //   buttonall[i].style.padding = "10px";
+      //   buttonall[i].style.fontSize = "24px";
+      //   buttonall[i].style.boxShadow = " 0 2px 5px rgba(0, 0, 0, 0.3) inset";
+      //   buttonall[i].style.borderRadius = "5px";
+      //   buttonall[i].style.border = "none";
+      //   buttonall[i].style.cursor = "pointer";
+      //   buttonall[i].style.textAlign = "center";
+      //   buttonall[i].style.backgroundColor = "#f2f2f2";
+      //   buttonall[i].style.color = "#333";
+      //   buttonall[i].style.transition = "all 0.3s ease";
+      //   buttonall[i].style.outline = "none";
+      //   buttonall[i].style.userSelect = "none";
+      //   buttonall[i].style.boxSizing = "border-box";
+      //   buttonall[i].style.fontFamily = "Arial, sans-serif";
+
+      //   buttonall[i].addEventListener("onmousehover", function () {
+      //     style.backgroundColor = "lightgray";
+      //     style.color = "black";
+      //   });
+
+      //   buttonall[i].addEventListener("onmouseleave", function () {
+      //     if (this.value !== "=") {
+      //       this.style.backgroundColor = "";
+      //       this.style.color = "";
+      //     } else {
+      //       this.style.backgroundColor = "orange";
+      //       this.style.color = "white";
+      //     }
+      //   });
+      // }
+
+      // const equl = document.querySelector("#buttons > button[value='=']");
+      // equl.style.backgroundColor = "orange";
+      // equl.style.color = "white";
+      // const buttonsEl = document.querySelectorAll("button");
+      // const inputFieldEl = document.getElementById("input");
+
+      // for (let i = 0; i < buttonsEl.length; i++) {
+      //   buttonsEl[i].addEventListener("click", () => {
+      //     const buttonValue = buttonsEl[i].innerText;
+      //     if (buttonValue === "C") {
+      //       inputFieldEl.value = "";
+      //     } else if (buttonValue === "←") {
+      //       inputFieldEl.value = inputFieldEl.value.slice(0, -1);
+      //     } else if (buttonValue === "=") {
+      //       if (inputFieldEl.value === "") {
+      //         inputFieldEl.value = "0";
+      //       } else {
+      //         inputFieldEl.value = eval(inputFieldEl.value);
+      //       }
+      //     } else {
+      //       inputFieldEl.value += buttonValue;
+      //     }
+      //   });
+      // }
+    </script>
+  </body>
 </html>
+
+
