--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-      * {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-#root {
-  background-color: #f2f2f2;
-  padding: 20px;
-  max-width: 400px;
-  margin: 0 auto;
-  border: solid 1px #ccc;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  margin-top: 40px;
-}
+        div{
+            width: 100px;
+            height: 100px;
+            background-color: red;
+        }
     </style>
-  </head>
-  <body>
-    <script src="javascript.js">
-    </script>
-  </body>
+</head>
+<body>
+    <div>
+        <h1>Hello</h1>
+        
+    </div>
+</body>
 </html>
